<resources>
    <string name="app_name">FarmBnB_CW1</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="resetting_your_password">Resetting your Password</string>
    <string name="enter_phone_number">Enter Phone Number:</string>
    <string name="welcome_to_farmbnb">Welcome to FarmBnB!</string>
    <string name="contact_us">Contact Us!</string>
    <string name="login">Login</string>
    <string name="phone_number">Phone Number:</string>
    <string name="name">Name:</string>
    <string name="email_address">Email Address:</string>
    <string name="send_email">Send Email</string>
    <string name="confirm_changes">Confirm Changes</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="need_to_register">Need to register?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_into_your_account">Sign into your account</string>
    <string name="dropdown_list_of_bookings">Dropdown list of bookings</string>
    <string name="booking_history">Booking History</string>
    <string name="home">Home</string>
    <string name="btnSubmit">Submit</string>
    <string name="booking_confirmation">Booking Confirmation</string>
    <string name="go_back">Go back</string>
    <string name="underline">___________</string>
    <string name="address">Address:</string>
    <string name="TVdate_selected">Date Selected:</string>
    <string name="tvaccommodation_type">Accommodation Type:</string>
    <string name="TVfull_name">Full Name:</string>
    <string name="contact_farmbnb_email">contact@farmbnb.com</string>
    <string name="contact_farmbnb_number">0345 123 4567</string>
    <string name="contact_frambnb_address">1234 Farm Lane, Devon, DV8 5JS</string>
    <string name="TVHowToContact">Here\'s how to contact us!</string>
    <string name="enter_address_line_1">Address Line 1:</string>
    <string name="enter_town">City / Town</string>
    <string name="enter_address_line_2">Address Line 2:</string>
    <string name="enter_postcode">Postcode:</string>
    <string name="enter_customer_details">Enter Customer Details</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="book_roombtn">Book Room</string>
    <string name="view_booking_historybtn">View booking history</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_to_farmbnb">Sign Up to FarmBnB</string>
    <string name="sign_up_to_to_an_account">Sign Up to an Account</string>
    <string name="new_password">New Password:</string>
    <string name="my_account">My Account</string>
    <string name="thank_you_for_booking_your_holiday_with_farmbnb">Thank you for booking your holiday with FarmBnB</string>
</resources>