<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Confirm_Booking_Details">

    <Button
        android:id="@+id/btnBack_confirm"
        android:layout_width="142dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/button_color"
        android:fontFamily="@font/montserrat"
        android:onClick="previous"
        android:text="@string/go_back"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:iconPadding="14sp"
        app:layout_constraintEnd_toStartOf="@+id/btnHome_confirm"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="3sp" />

    <Button
        android:id="@+id/btnHome_confirm"
        android:layout_width="112dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/button_color"
        android:fontFamily="@font/montserrat"
        android:onClick="goHome"
        android:text="@string/home"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:iconPadding="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnBack_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnBack_confirm"
        app:strokeWidth="3sp" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:background="#A8717171"
        android:fontFamily="@font/montserrat"
        android:text="@string/booking_confirmation"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/confAddress"
        android:layout_width="180dp"
        android:layout_height="75sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="#A8717171"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toEndOf="@+id/textView36"
        app:layout_constraintTop_toBottomOf="@+id/confFullName" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:background="#A8717171"
        android:fontFamily="@font/montserrat"
        android:text="@string/TVfull_name"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/confFullName"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/confAccommodation"
        android:layout_width="125dp"
        android:layout_height="25sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="296dp"
        android:background="#A8717171"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toEndOf="@+id/textView37"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSubmit_confirm"
        android:layout_width="133dp"
        android:layout_height="65dp"
        android:layout_marginTop="408dp"
        android:backgroundTint="@color/button_color"
        android:fontFamily="@font/montserrat"
        android:onClick="confBooking"
        android:text="@string/btnSubmit"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:iconPadding="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="3sp" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="#A8717171"
        android:fontFamily="@font/montserrat"
        android:text="@string/TVdate_selected"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/confDate"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView37" />

    <TextView
        android:id="@+id/confDate"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:background="#A8717171"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confAccommodation" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="296dp"
        android:background="#A8717171"
        android:fontFamily="@font/montserrat"
        android:text="@string/tvaccommodation_type"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:background="#A8717171"
        android:fontFamily="@font/montserrat"
        android:text="@string/address"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView35" />

    <TextView
        android:id="@+id/confFullName"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="#A8717171"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView35"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>