<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Enter_Customer_Details">

    <Button
        android:id="@+id/btnSubmit_Details"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="572dp"
        android:backgroundTint="@color/button_color"
        android:fontFamily="@font/montserrat"
        android:onClick="submitDetails"
        android:text="@string/btnSubmit"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="3sp" />

    <EditText
        android:id="@+id/enterPostcode"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:background="#A8717171"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/enter_postcode"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView53"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.63"
        app:layout_constraintStart_toEndOf="@+id/textView53"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="208dp"
        android:background="#A8717171"
        android:fontFamily="@font/montserrat"
        android:text="@string/TVfull_name"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/enterName"
        app:layout_constraintHorizontal_bias="0.344"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="484dp"
        android:background="#A8717171"
        android:fontFamily="@font/montserrat"
        android:text="@string/enter_postcode"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="284dp"
        android:background="#A8717171"
        android:fontFamily="@font/montserrat"
        android:text="@string/enter_address_line_1"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/enterAddressLine1"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="428dp"
        android:background="#A8717171"
        android:fontFamily="@font/montserrat"
        android:text="@string/enter_town"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/enterCity"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterName"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginEnd="28dp"
        android:background="#A8717171"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView49"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/enterAddressLine1"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginEnd="28dp"
        android:background="#A8717171"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/enter_address_line_1"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView50"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="356dp"
        android:background="#A8717171"
        android:fontFamily="@font/montserrat"
        android:text="@string/enter_address_line_2"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/enterAddressLine2"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterAddressLine2"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginEnd="28dp"
        android:background="#A8717171"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/enter_address_line_2"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView51"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/enterCity"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginEnd="28dp"
        android:background="#A8717171"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/enter_town"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView52"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/enterCustomerDetailsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:background="@color/textBoxBackgroundColor"
        android:fontFamily="@font/montserrat"
        android:text="@string/enter_customer_details"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBack_Details"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/button_color"
        android:fontFamily="@font/montserrat"
        android:onClick="previous"
        android:text="@string/go_back"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:iconPadding="14sp"
        app:layout_constraintEnd_toStartOf="@+id/btnHome_Details"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="3sp" />

    <Button
        android:id="@+id/btnHome_Details"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/button_color"
        android:fontFamily="@font/montserrat"
        android:onClick="goHome"
        android:text="@string/home"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:iconPadding="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnBack_Details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnBack_Details"
        app:strokeWidth="3sp" />
</androidx.constraintlayout.widget.ConstraintLayout>